Fix stylesheet spacing

--- a/depot/app/assets/stylesheets/application.scss
+++ b/depot/app/assets/stylesheets/application.scss
@@ -1,19 +1,4 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
- body, body > p, body > ol, body > ul, body > td {margin: 8px !important}
+body, body > p, body > ol, body > ul, body > td {margin: 8px !important}
 
  #banner {
    position: relative;
@@ -42,6 +27,10 @@
    font: bold smaller sans-serif;
  }
 
+ #notice:empty {
+  display: none;
+}
+
  #columns {
    background: #141;
    display: flex;
@@ -52,6 +41,7 @@
      flex: 1;
    }
 
+//
    #side {
      padding: 1em 2em;
      background: #141;
@@ -88,6 +78,7 @@
        }
      }
    }
+//
  }
 
  @media all and (max-width: 800px) {
@@ -106,6 +97,7 @@
    }
  }
 
+//
 .depot_form {
   fieldset {
     background: #efe;
@@ -145,3 +137,4 @@
     }
   }
 }
+ //
